Actualización de los archivos

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
             <div class="buscador">
                 <input type="text" placeholder="Ingresar nombre o Id" id="buscar">
-                <input type="submit" onclick="buscarPoke()">
+                <input type="submit" onclick="buscarPoke()" value="Buscar">
             </div>
 
             <div class="pad">
