--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Pokedex</title>
 </head>
 <body>
     <div class="contenedor">
@@ -19,7 +19,7 @@
             <div class="tarjetaPokemon">
                 <div class="displaySuperior">
                     <span id="pokeId"></span>
-                    <img src="" alt="" id="pokePic">
+                    <img src="" alt="Pokemon" id="pokePic">
                     <span id="tipoPoke"></span>
                     <h4 id="nombrePoke"></h4>
                 </div>
