Actualización de archivos

--- a/index.html
+++ b/index.html
@@ -20,19 +20,9 @@
                 <div class="displaySuperior">
                     <span id="pokeId"></span>
                     <img src="" alt="Pokemon" id="pokePic">
-                    <span id="tipoPoke"></span>
+                    <ul id="tipoPoke"></ul>
                     <h4 id="nombrePoke"></h4>
                 </div>
-            <!--
-                    <div class="menuDisplay">
-                    <ul class="pokeMenu">
-                        <li><a href="#">Sobre</a></li>
-                        <li><a href="#">Stats</a></li>
-                        <li><a href="#">Evo</a></li>
-                        <li><a href="#">Moves</a></li>
-                    </ul>
-                </div>
-            -->
                 <div class="stats">
                     <span id="hp"></span>
                     <p class="barra"></p>
